Nuevo enfoque de la app

--- a/Reserva/style_reserva.css
+++ b/Reserva/style_reserva.css
@@ -34,7 +34,9 @@ label {
 
 input[type="text"],
 input[type="date"],
-input[type="time"] {
+input[type="time"],
+input[type="email"],
+select {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
