--- a/Reserva/style_reserva.css
+++ b/Reserva/style_reserva.css
@@ -1,11 +1,12 @@
-/* Estilo armonizado con la página principal */
-
 body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
   height: 100vh;
-  background: linear-gradient(to right, #d4fcd4, #f0fff0);
+  background-image: url("pateada.jpg");
+  background-size: cover;      
+  background-position: center;    
+  background-repeat: no-repeat; 
   display: flex;
   justify-content: center;
   align-items: center;
