--- a/Reserva/style_reserva.css
+++ b/Reserva/style_reserva.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
   height: 100vh;
-  background-image: url("pateada.jpg");
+  background-image: url("pateada_firma.jpg");
   background-size: cover;      
   background-position: center;    
   background-repeat: no-repeat; 
@@ -28,7 +28,6 @@ h1 {
   margin-bottom: 20px;
   color: #1b5e20;
 }
-
 label {
   display: block;
   text-align: left;
