--- a/Reserva/style_reserva.css
+++ b/Reserva/style_reserva.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
   height: 100vh;
-  background-image: url("pateada_firma.jpg");
+  background-image: url("cancha.jpg");
   background-size: cover;      
   background-position: center;    
   background-repeat: no-repeat; 
